static/css/styles.css
html, body {
  font-family: 'Roboto', 'Helvetica', sans-serif;
  height: 100%;
}

.docs-layout {
  height: 100%;
}

.docs-layout .mdl-layout__header .mdl-layout__drawer-button {
  color: rgba(0, 0, 0, 0.54);
}


/*

  HEADER
  
*/
.docs-header {
  height: 113px;
  margin-left: 0px !important;
  width: 100% !important;
  box-shadow: none !important;
  background-color: rgb(44, 43, 45) !important;
}

@media screen and (max-width: 1025px) {

  .docs-header {
    height: 60px;
  }

  .docs-header .navbar-menus {
    display: none !important;
  }
}

.docs-header .container {
  width: 100%;
  height: 100%;
  max-width: 1130px;
  min-width: 1024px;
  margin-left: auto;
  margin-right: auto;
  font-family: 'Libre Franklin',sans-serif;
}

.docs-header .container .navbar-brand {
  float: left;
}

.docs-header .container .navbar-brand img {
  margin-top: 19px;
  margin-left: 20px;
  height: 75px;
}

@media screen and (max-width: 1025px) {

  .docs-header .container .navbar-brand img {
    margin-top: 6px;
    margin-left: 70px;
    height: 46px;
  }
}

.docs-header .container .navbar-menus {
  display: inline-block;
  float: right;
  padding-left: 15px;
  padding-right: 15px;
}

.docs-header .container .navbar-menus ul {
  line-height: 22.857px;
  font-weight: 400;
  letter-spacing: 0;
  text-rendering: optimizeLegibility;
  list-style-type: none;
  font-size: 14px;
}

.docs-header .container .navbar-menus li {
  display: inline-block;
}

.docs-header .container .navbar-menus a {
  font-weight: 100;
  text-decoration: none;
  background-color: transparent;
  transition: all .5s ease;
}


.docs-header .container .navbar-menus .header-top-menu {
  list-style-type: none;
  margin-top: 15px;
  margin-bottom: 10px;
}

.docs-header .container .navbar-menus .header-main-menu {
  list-style-type: none;
  margin-left: 4px;
  margin-top: 30px;
}


.docs-header .container .navbar-menus .header-top-menu li:first-of-type:after {
  content: '|';
  color: #ff5000;
}

.docs-header .container .navbar-menus .header-top-menu li a {
  color: #ff5000;
  text-transform: uppercase;
  padding: 0 15px;
  font-size: 17px;
  line-height: 25px;
}

.docs-header .container .navbar-menus .header-main-menu li a {
  color: #ffffff;
  padding: 2px;
  font-size: 15px;
  line-height: 20px;
  margin-left: 10px;
  margin-bottom: 15px;
  margin-top: 30px;
  margin-right: 10px;
}
    
/*

  DROP DOWN MENUS
  
*/

.docs-header .container .navbar-menus .header-main-menu .dropdown-menu {
  display: none;
  position: absolute;
  top: 0px;
  left: 0px;
  background-color: rgba(243, 102, 33, 0.8);
  box-shadow: rgba(0, 0, 0, 0.176) 0px 6px 12px 0px;
  border: 1px solid rgba(0, 0, 0, 0.15);
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  z-index: 2000;
  min-width: 160px;
}

.docs-header .container .navbar-menus .header-main-menu .dropdown-menu > div {
  text-align: center;
  margin: 5px 0;
}

.docs-header .container .navbar-menus .header-main-menu .dropdown-menu > div:hover {
  background-color: rgba(143, 52, 0, 1);
}

.docs-header .container .navbar-menus .header-main-menu .dropdown-menu > div a {
  font-family: "Libre Franklin", sans-serif;
  font-size: 10pt;
  color: #fff !important;
  font-weight: 100 !important;
  text-rendering: optimizeLegibility;
}

/*

  SIDE MENU
  
*/


.docs-drawer {
  border: none;
  height: calc(100% - 113px) !important;
  max-height: calc(100% - 113px) !important;
  top: 113px !important;
  overflow-y: hidden !important;
  display: flex;
  flex-flow: column;
}

@media screen and (max-width: 1025px) {

  .docs-drawer {
    height: calc(100% - 60px) !important;
    max-height: calc(100% - 60px) !important;
    top: 60px !important;
  }
}


/* iOS Safari specific workaround */
.docs-drawer .mdl-menu__container {
  z-index: -1;
}
.docs-drawer .docs-navigation {
  z-index: -2;
}
/* END iOS Safari specific workaround */
.docs-drawer .mdl-menu .mdl-menu__item {
  display: flex;
  align-items: center;
}

#search-container {
  padding-left: 5px;
  padding-right: 5px;
  padding-bottom: 10px;
  padding-top: 10px;
  border: none;
  background-color: #e5e5e5;
  display: none;
}

#search-container-holding-space {
  height: 66px;
  background-color: #e5e5e5;
}

.docs-navigation {
  flex: 2;
  overflow: auto;
  padding-top: 0px !important;
  padding-bottom: 20px !important;
}

.docs-navigation #menu-content {
  padding-top: 10px !important;
}


/*

  version menu
  
*/

#version-menu {
  background-color: #e5e5e5;
  padding-top: 10px;
  padding-bottom: 10px;
}

#version-menu-dropdown {
  visibility: hidden;
}

#version-menu #vert-button {
  margin-left: 10px;
  color: #666;
}

#version-menu #text-button {
  color: #666 !important;
}

#version-menu .mdl-menu__container {
  margin-left: 20px;
  z-index: 1000 !important;
}

/*

  SIDE MENU NAV BUTTONS
  
*/


.docs-layout .docs-navigation .mdl-navigation__link {
  display: flex !important;
  flex-direction: row;
  font-weight: 350;
  font-size: 1em;
  padding: 4px 0px;
  color: #000;
}

.docs-layout .docs-navigation .mdl-navigation__link .menu-link-row {
  display: flex;
  flex-direction:row;
}

.docs-layout .docs-navigation .mdl-navigation__link .menu-link-title {
  display: block;
  flex: 1 0 auto;
}

.docs-layout .docs-navigation .mdl-navigation__link .menu-link-icon {
  display: block;
  flex: 0 0 auto;
  padding-right: 10px;
}

.docs-layout .docs-navigation .mdl-navigation__link.active {
  font-weight: 500;
}

.docs-layout .docs-navigation .mdl-navigation__link:hover {
  
}

.docs-layout .docs-navigation .mdl-navigation__link .empty-icon {
  display: inline-block;
  width: 24px;
}

.docs-header .mdl-layout__drawer-button .material-icons {
  font-size: 24px;
  color: rgba(255, 255, 255);
  margin-right: 32px;
  padding-left: 20px;
}

.docs-header .mdl-layout__drawer-button {
  display: none;
}

@media screen and (max-width: 1025px) {
  .docs-header .mdl-layout__drawer-button {
    display: block;
  }
}

.docs-content {
  padding-bottom: 40px;
}

/*

  hide large content and show small content when screen is small
  
*/
.docs-wide-content {
  display: none;
}

.docs-narrow-content {
  display: none;
}

@media screen and (min-width: 1025px) {
  .docs-wide-content {
    display: inline-block;
  }
}

@media screen and (max-width: 1025px) {
  .docs-narrow-content {
    display: inline-block;
  }
}


hr.margin {
  margin-top:50px;
}

.listmargin {
  margin-top:20px;
}

/*

  apply material design rules to page content
  
*/

.mdl-layout__content {
  padding-left: 60px;
  padding-right: 60px;
}

.mdl-layout__content * {
  font-size: 15px;
  
}

.mdl-layout__content p {
  color: rgb(51, 68, 76) !important;
  font-weight: 100;
  font-family: "Open Sans",sans-serif !important;
}

.mdl-layout__content a {
  color: #f15a24;
  font-weight: normal;
}

.mdl-layout__content a * {
  color: #f15a24;
  font-weight: normal;
}

.mdl-layout__content p > code {
  color: #666;
  background-color: #f5f5f5;
  padding: 4px;
  font-weight: 500;
}

.mdl-layout__content .header-wrapper {
  margin-top: 35px;
  padding-top: 15px;
  padding-bottom: 15px;
}

.mdl-layout__content .header-container {
  border-left: 1px solid #ff0000;
}

.mdl-layout__content .page-title {
  margin: 0px;
  padding: 0px;
  padding-left: 20px;
  padding-bottom: 10px;
}

.mdl-layout__content .page-subtitle {
  margin: 0px;
  padding: 0px;
  padding-left: 20px;
  padding-bottom: 10px;
  color: #999;
}

.mdl-layout__content .github-link-cell {
  float: right;
  padding-top: 12px;
}

/*
  these will be be shown by javascript once the material design classes have been applied
*/
.mdl-layout__content table {
  display: none;
  width: 100%;
  margin-top: 30px;
  margin-bottom: 30px;
}

/*
  the default header sizes are a bit too big
*/
.mdl-layout__content h1 {
  font-size: 30px;
  font-weight: 500;
}

.mdl-layout__content h2 {
  font-size: 24px;
  font-weight: 500;
}

.mdl-layout__content h3 {
  font-size: 20px;
  font-weight: 500;
}

.mdl-layout__content h4 {
  font-size: 18px;
  font-weight: 500;
}

.mdl-layout__content h5 {
  font-size: 16px;
  font-weight: 500;
}

.mdl-layout__content h6 {
  font-size: 14px;
  font-weight: 500;
}

/*
  links
*/

.widelink-container {
  background-color: #FEF8F6;
  color: #dc522b;
  border: 1px solid #dc522b;
  border-radius: 4px;
  margin-right: 5px;
  padding: 20px;
  font-size: 18px;
}

.prevnextlink-container {
  background-color: #ffffff;
  color: #666 !important;
  border-radius: 4px;
  padding: 20px;
  font-size: 18px;
}

.prevnextlink-container * {
  color: #666 !important;
  font-size: 18px;
}

.no-underline {
  text-decoration: none;
}

.float-left {
  float: left;
  display: inline-block;
}

.float-right {
  float: right;
  display: inline-block;
}

.prevnext-small {
  font-size: 0.7em !important;
  font-weight: 200 !important;
}

.img-padding {
  padding: 5px;
}

/*

  menu
  
*/

.branchlink {

}

.leaflink {
  color: #666;
  font-size: .85em;
}

.infoblock {
  padding: 20px;
  background-color: #f5f5f5;
  border-left: 3px solid #dc522b;
}


/*

  search
  
*/

#search-hits {
  position: absolute;
  left: 280px;
  top: 178px;
  width: 400px;
  padding: 10px;
  border: 1px solid #999;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  background-color: #fafafa;
  z-index: 1000;
  display: none;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, .15);
}

.search-box-input {
  width: 100% !important;
}

#search-hits .search-hits-empty {
  margin: 15px;
  color: #f15a24;
}

#search-hits .search-hits-row {
  margin: 15px;
  padding-bottom: 15px;
  border-bottom: 1px solid #ccc;
}

#search-hits .search-hits-section {
  font-size: 0.8em;
}

#search-hits .search-hits-section a {
  text-decoration: none;
  color: #f15a24;
}

#search-hits .search-hits-page a {
  color: #666;
}

#search-hits .search-hits-page em {
  color: #f15a24;
}

#search-hits .search-hits-matches a {
  font-size: 0.8em;
  font-weight: normal;
  color: #999;
  text-decoration: none;
}

#search-hits .search-hits-matches em {
  color: #f15a24;
}

@media screen and (max-width: 1025px) {
  #search-hits {
    top: 56px;
  }
}


/*

  scrollspy
  
*/

#scrollspy-container nav.fixed {
  position: fixed;
  margin-right: 66px;
  top: 113px;
}

.scrollspy-item {
  margin-bottom: 6px;
}

.scrollspy-item, .scrollspy-item a  {
  color: #999;
}

.scrollspy-item.active, .scrollspy-item.active a  {
  color: #f15a24;
}

.scrollspy-H2 a {
  font-size: 12pt !important;
  text-decoration: none;
}

.scrollspy-H3 {
  margin-left: 20px;
}

.scrollspy-H3 a {
  font-size: 10pt !important;
  text-decoration: none;
}

h2,h3,h4,h5,h6 a {
  text-decoration: none;
}

@media screen and (max-width: 1025px) {
  #scrollspy-container {
    display: none;
  }
}



/*

  copy paste
  
*/

.highlight .copy-link {
  margin-left: 10px;
  cursor: pointer;
  background-color: #fff;
  border: 1px solid #f15a24;
  color: #f15a24;
  padding: 3px;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 8pt;
  float: right;
}

.highlight .copy-link.active {
  background-color: #f15a24;
  color: #fff;  
}

.mdl-layout__content pre {
  padding: 20px;
  background-color: #fafafa;
  border: 1px solid #ccc;
  overflow: auto;
}

.prev-next-title {
  font-size: 10pt;
  color: #666;
}

